<resources>
    <string name="app_name">GoFinder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">username</string>
    <string name="sex">sex</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="change">change</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="birthday">生日</string>
    <string-array name="sexType">
        <item>男</item>
        <item>女</item>
        <item>外星人</item>
    </string-array>
    <string-array name="packPosition">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>

    </string-array>
    <string name="app_info">Go and find it!</string>
    <string name="scanQRcode">扫码支付</string>
    <string name="reverseGetCar">反向取车</string>
    <string name="password">密码</string>
    <string name="tel">电话</string>
    <string name="sexy">性别</string>
    <string name="users">用户名</string>

</resources>
